Initial Displaying of the students queries under AllTickets tab

--- a/Views/Home/AllTickets.cshtml
+++ b/Views/Home/AllTickets.cshtml
@@ -1,4 +1,6 @@
-﻿@* AllTickets.cshtml *@
+﻿
+
+@* AllTickets.cshtml *@
 <div class="tickets">
     <div class="ticket">
         <div class="ticket-header">
