--- a/Views/Query/NewQuery/CreateQuery.cshtml
+++ b/Views/Query/NewQuery/CreateQuery.cshtml
@@ -5,14 +5,13 @@
     ViewData["Title"] = "Create a New Query";
 }
 
-<h1>Create a New Query</h1>
-<p>Choose the type of query you would like to submit:</p>
-<div class="container">
+<div class="container create-query-container">
+    <h1 class="text-center mb-4">Create a New Query</h1>
+    <p class="text-center mb-5">Choose the type of query you would like to submit:</p>
 
-
-    <div class="row">
+    <div class="row justify-content-center">
         <!-- Academic Card -->
-        <div class="col-md-6">
+        <div class="col-md-4 col-sm-6 mb-4">
             <div class="card query-card">
                 <div class="card-body text-center">
                     <h5 class="card-title">Academic Issue</h5>
@@ -23,7 +22,7 @@
         </div>
 
         <!-- Administrative Card -->
-        <div class="col-md-6">
+        <div class="col-md-4 col-sm-6 mb-4">
             <div class="card query-card">
                 <div class="card-body text-center">
                     <h5 class="card-title">Administrative Issue</h5>
