--- a/Views/Query/Queries.cshtml
+++ b/Views/Query/Queries.cshtml
@@ -1,10 +1,11 @@
-﻿@model Apptivate_UQMS_WebApp.Models.QueryModel
+﻿@model Apptivate_UQMS_WebApp.Models.QueryModel.Query
 
 @{
     ViewData["Title"] = "Queries";
 }
 
 <link rel="stylesheet" type="text/css" href="~/css/Queries.css" />
+<!-- Include the partial view for user profile -->
 
 <div class="dashboard-container">
     <div class="dashboard-header">
@@ -18,6 +19,13 @@
             <i class="search-icon">🔍</i>
         </div>
     </div>
+
+
+    <div id="ticketContent">
+        @await Html.PartialAsync("QueryOverview/AllTickets", Model)
+    </div>
+
+
 
     <div class="dashboard-content">
         <div class="ticket-section">
@@ -41,9 +49,11 @@
             </div>
 
             <div id="ticketContent">
-                @Html.Partial("QueryOverview/AllTickets")
+                @await Html.PartialAsync("QueryOverview/AllTickets", Model)
             </div>
         </div>
+    </div>
+
 
     <div class="query-box">
     <h3>New query</h3>
@@ -62,11 +72,6 @@
     <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function () {
-            // Toggle the form visibility
-            $('#expand-query-form').on('click', function () {
-                $('.query-form-section').toggleClass('collapsed');
-            });
-
             $('.tab').on('click', function () {
                 var target = $(this).data('target');
 
@@ -74,8 +79,9 @@
                 $(this).addClass('active');
 
                 // Load the partial view based on the target
-                $('#ticketContent').load('/Home/' + target);
+                $('#ticketContent').load('/Query/' + target);
             });
         });
+
     </script>
 }
