--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -4,69 +4,5 @@
 
 <link rel="stylesheet" type="text/css" href="~/css/DashboardPage.css" />
 
-<div class="dashboard-container">
-    <div class="dashboard-header">
-        <h1>Hello Shakshi</h1>
-        <div class="filter-container">
-            <select>
-                <option>This Week</option>
-                <option>Last Week</option>
-            </select>
-            <input type="text" placeholder="Search for ticket" />
-             <i class="search-icon">🔍</i> 
-        </div>
-    </div>
-
-    <div class="dashboard-content">
-        <div class="ticket-section">
-            <div class="tabs">
-                <button class="tab active" data-target="AllTickets">
-                    <img src="~/images/all-tickets.png" alt="All Tickets Icon" />
-                    All Tickets
-                </button>
-                <button class="tab" data-target="NewTickets">
-                    <img src="~/images/new.png" alt="New Icon" />
-                    New
-                </button>
-                <button class="tab" data-target="OnGoingTickets">
-                    <img src="~/images/on-going.png" alt="On-going Icon" />
-                    On-going
-                </button>
-                <button class="tab" data-target="ResolvedTickets">
-                    <img src="~/images/resolved.png" alt="Resolved Icon" />
-                    Resolved
-                </button>
-            </div>
-
-            <div id="ticketContent">
-                @Html.Partial("AllTickets")
-            </div>
-        </div>
-
-        <div class="recent-activity">
-            <h3>Recent Activity</h3>
-            <ul>
-                <li>Sonal closed "How to do my password?"</li>
-                <!-- Repeat activity structure as needed -->
-            </ul>
-            <button>Show more</button>
-        </div>
-    </div>
-</div>
-
-@section Scripts {
-        <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.min.js"></script>
-        <script type="text/javascript">
-            $(document).ready(function () {
-                $('.tab').on('click', function () {
-                    var target = $(this).data('target');
-
-                    $('.tab').removeClass('active');
-                    $(this).addClass('active');
-
-                    // Load the partial view based on the target
-                    $('#ticketContent').load('/Home/' + target);
-                });
-            });
-        </script>
-}
+        <h1>Hello User</h1>
+ 
