--- a/Views/Home/test.cshtml
+++ b/Views/Home/test.cshtml
@@ -28,6 +28,29 @@
     </div>
 
 
+
+@* ResolvedTickets.cshtml *@
+<div class="tickets">
+    <div class="ticket">
+        <div class="ticket-header">
+            <span class="ticket-id">Ticket# 2023-CS126</span>
+            <span class="ticket-priority">Low Priority</span>
+        </div>
+        <div class="ticket-body">
+            <p>Issue with email notifications resolved.</p>
+            <span class="ticket-time">Posted at 4:00 PM</span>
+        </div>
+        <div class="ticket-footer">
+            <span class="ticket-author">Shakashi Patel</span>
+            <a href="#">Open Ticket</a>
+        </div>
+    </div>
+    <!-- Repeat ticket structure as needed -->
+</div>
+
+
+
+
     @section Scripts {
         <script src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.min.js"></script>
         <script type="text/javascript">
