getting new roles

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                 </li>
                 <li class="nav-item">
                    
-                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">
+                        <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="UserManagement">
                         <img src="~/svgs/four-squares-button-of-view-options.svg" alt="Dashboard Icon" class="icon" /><span>Dashboard</span>
                     </a>
                 </li>
